# searchium

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  TODO.md  buf.gen.yaml  build.ts  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json
proto/: searchium.proto
proto/searchium/v2/: searchium.proto
server/: Cargo.toml
server/src/: concurrent_bag.rs  file_contents.rs  fs_filter.rs  fs_state.rs  gen.rs  index.rs  index_server.rs  main.rs  search_engine.rs  service.rs
server/src/index/: interface.rs  state.rs
src/: controlsProvider.ts  detailsPanel.ts  documentRegistrationService.ts  extension.ts  extensionsMethods.ts  fileSearch.ts  history.ts  indexState.ts  ipc.ts  ipcChannel.ts  ipcEvents.ts  ipcRequests.ts  ipcResponses.ts  logger.ts  search.ts  utils.ts  webviewUtils.ts
src/index/: indexInterface.ts  indexServerProcess.ts
src/index/legacy/: legacyServerProcess.ts
src/shared/: fromControlsWebview.ts  fromDetailsWebview.ts  fromWebView.ts  toControlsWebview.ts  toDetailsWebview.ts  toWebView.ts
src/views/: .eslintrc.json  controls.ts  details.ts  style.css
src/webview/: controls.ts  details.ts  main.ts  style.css
