[package]
name = "searchium-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9.0"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread"] }
tokio-util = "0.7.7"
serde = "1.0"
prost = "0.11.0"
prost-types = "0.11.9"
pbjson = "0.5.1"
tokio-stream = { version = "0.1.12", features = ["sync"] }
async-stream = "0.3.5"
futures = "0.3.28"
futures-core = "0.3.28"
rayon = "1.7.0"
scc = "1.4.4"
ignore = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=["std", "fmt", "env-filter"]}
memory-stats = "1.0.0"
memchr = "2.5.0"