[package]
name = "searchium-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.7"
serde = "1.0"
prost = "0.12.3"
prost-types = "0.12.3"
pbjson = "0.6.0"
tokio-stream = { version = "0.1.12", features = ["sync"] }
async-stream = "0.3.5"
futures = "0.3.28"
futures-core = "0.3.28"
rayon = "1.7.0"
scc = "2.0.16"
ignore = "=0.4.20"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=["std", "fmt", "env-filter"]}
memory-stats = "1.0.0"
memchr = "2.5.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
